--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -3,3 +3,11 @@ title: Επικοινωνία
 ---
 
 # Επικοινωνία
+<!---
+Εθελοντούμε
+Αγία Παρασκευή
+6931261777
+https://facebook.com/syllogos.ethelontoume
+https://instagram.com/ethelontoume
+Χάρτης: https://www.google.com/maps/dir//%20%CE%91%CE%B3%CE%AF%CE%B1%20%CE%A0%CE%B1%CF%81%CE%B1%CF%83%CE%BA%CE%B5%CF%85%CE%AE
+--->
