--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,6 +5,8 @@ title: Σύλλογος Εθελοντούμε
 # Εθελοντούμε
 Ν.Π.Ι.Δ. Μη Κερδοσκοπικό
 
+[!logo](/img/logo.png)
+
 Ο Πανελλήνιος Σύλλογος Φίλων Παιδιών, Εφήβων, Ενηλίκων ΑμεΑ και όλων των Παιδιών «Εθελοντούμε» ιδρύθηκε το 2023 στην Αθήνα, με στόχο την ευαισθητοποίηση και ενημέρωση του κοινού για θέματα που αφορούν άτομα με αναπηρίες και γενικά τα παιδιά.
 
 Ο Σύλλογος εστιάζει στις ανάγκες και τα δικαιώματα όλων των ηλικιακών ομάδων ατόμων με αναπηρία και παρέχει υποστήριξη σε οικογένειες με παιδιά που έχουν αυτισμό, σύνδρομο Down, νοητική αναπηρίσ, κινητικά προβλήματα και αισθητηριακές αναπηρίες. Επιπλέον, αγωνιζόμαστε για μια ποιοτική διαβίωση για τους ενηλίκους ΑμεΑ και οργανώνουμε δράσεις ευαισθητοποίησης για το ευρύ κοινό.
