--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,7 +5,7 @@ title: Σύλλογος Εθελοντούμε
 # Εθελοντούμε
 Ν.Π.Ι.Δ. Μη Κερδοσκοπικό
 
-[!logo](/img/logo.png)
+![logo](/img/logo.png)
 
 Ο Πανελλήνιος Σύλλογος Φίλων Παιδιών, Εφήβων, Ενηλίκων ΑμεΑ και όλων των Παιδιών «Εθελοντούμε» ιδρύθηκε το 2023 στην Αθήνα, με στόχο την ευαισθητοποίηση και ενημέρωση του κοινού για θέματα που αφορούν άτομα με αναπηρίες και γενικά τα παιδιά.
 
