--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -15,5 +15,5 @@ import GoogleMapEmbed from '@site/src/components/GoogleMapEmbed';
 https://facebook.com/syllogos.ethelontoume  
 https://instagram.com/ethelontoume
 
-## Ενημερωτικό Δελτίο
-## Συχνές Ερωτήσεις
+<!--## Ενημερωτικό Δελτίο-->
+<!--## Συχνές Ερωτήσεις-->
