--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -8,7 +8,7 @@ import GoogleMapEmbed from '@site/src/components/GoogleMapEmbed';
 <GoogleMapEmbed src="https://google.com/maps/embed?pb=!1m18!1m12!1m3!1d9685.66474877905!2d23.812286072863323!3d38.00873609657125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a199a7aaf8b51f%3A0x910d6d7df6f564c6!2zzpHOsy4gzqDOsc-BzrHPg866zrXPhc6uLCDOlc67zrvOrM60zrE!5e1!3m2!1sel!2snl!4v1758840710074!5m2!1sel!2snl"/>
 
 **Αγία Παρασκευή 153 43, Ελλάδα**  
-[6931261777](tel:6931261777)  
+[+306931261777](tel:+306931261777)  
 [ethelontoume@gmail.com](mailto:ethelontoume@gmail.com)
 
 ## Social Media
