--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -12,8 +12,12 @@ import GoogleMapEmbed from '@site/src/components/GoogleMapEmbed';
 [ethelontoume@gmail.com](mailto:ethelontoume@gmail.com)
 
 ## Social Media
-https://facebook.com/syllogos.ethelontoume  
-https://instagram.com/ethelontoume
+<a href="https://facebook.com/syllogos.ethelontoume" target="_blank" rel="noopener noreferrer" style={{ marginRight: '1em' }}>
+  <img src="/img/facebook.svg" alt="Facebook" width="32" height="32" />
+</a>
+<a href="https://instagram.com/ethelontoume" target="_blank" rel="noopener noreferrer">
+  <img src="/img/instagram.svg" alt="Instagram" width="32" height="32" />
+</a>
 
 <!--## Ενημερωτικό Δελτίο-->
 <!--## Συχνές Ερωτήσεις-->
