--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -18,6 +18,9 @@ import GoogleMapEmbed from '@site/src/components/GoogleMapEmbed';
 <a href="https://instagram.com/ethelontoume" target="_blank" rel="noopener noreferrer">
   <img src="/img/instagram.svg" alt="Instagram" width="32" height="32" />
 </a>
+<a href="https://youtube.com/ethelontoume" target="_blank" rel="noopener noreferrer">
+  <img src="/img/youtube.svg" alt="Youtube" width="32" height="32" />
+</a>
 
 <!--## Ενημερωτικό Δελτίο-->
 <!--## Συχνές Ερωτήσεις-->
