--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -15,10 +15,10 @@ import GoogleMapEmbed from '@site/src/components/GoogleMapEmbed';
 <a href="https://facebook.com/syllogos.ethelontoume" target="_blank" rel="noopener noreferrer" style={{ marginRight: '1em' }}>
   <img src="/img/facebook.svg" alt="Facebook" width="32" height="32" />
 </a>
-<a href="https://instagram.com/ethelontoume" target="_blank" rel="noopener noreferrer">
+<a href="https://instagram.com/ethelontoume" target="_blank" rel="noopener noreferrer" style={{ marginRight: '1em' }}>
   <img src="/img/instagram.svg" alt="Instagram" width="32" height="32" />
 </a>
-<a href="https://youtube.com/@ethelontoume" target="_blank" rel="noopener noreferrer">
+<a href="https://www.youtube.com/@ethelontoume" target="_blank" rel="noopener noreferrer">
   <img src="/img/youtube.svg" alt="YouTube" width="32" height="32" />
 </a>
 
