Update and rename terms-and-conditions.md to terms-and-conditions.mdx

--- a/src/pages/terms-and-conditions.mdx
+++ b/src/pages/terms-and-conditions.mdx
@@ -10,19 +10,19 @@ title: Όροι και Προϋποθέσεις
 Όλο το περιεχόμενο του ιστότοπου (κείμενα, εικόνες, γραφικά κλπ.) προστατεύεται από πνευματικά δικαιώματα. Επιτρέπεται η χρήση του μόνο για προσωπική και μη εμπορική χρήση χωρίς τροποποίηση και με αναφορά στην πηγή.
 
 ## Σύνδεσμοι προς Τρίτους Ιστότοπους
-Ενδέχεται να παρέχουμε συνδέσμους προς εξωτερικούς ιστότοπους. Δεν φέρουμε ευθύνη για το περιεχόμενό τους.
+Ο ιστότοπος ενδέχεται να περιλαμβάνει συνδέσμους προς εξωτερικούς ιστότοπους. Δεν φέρουμε ευθύνη για το περιεχόμενο ή την πολιτική αυτών των ιστότοπων.
 
 ## Περιορισμός Ευθύνης
 Το περιεχόμενο παρέχεται «ως έχει» χωρίς εγγυήσεις. Το [ethelontoume.gr](https://ethelontoume.gr) δεν ευθύνεται για τυχόν ζημία από τη χρήση του ιστότοπου.
+
+## Αλλαγές στους Όρους
+Διατηρούμε το δικαίωμα αλλαγής των όρων. Οι αλλαγές θα δημοσιεύονται σε αυτή τη σελίδα.
 
 ## Πολιτική Απορρήτου
 Σέβομαστε την ιδιωτικότητά σας. Συλλέγουμε μόνο τη διεύθυνση email σας για την αποστολή του ενημερωτικού δελτίου μας. Δεν κοινοποιούμε τα στοιχεία σας σε τρίτους εκτός αν απαιτείται από το νόμο.
 
 ## Πολιτική Cookies
-Χρησιμοποιούμε cookies για τη βελτίωση της εμπειρίας σας. Μπορείτε να διαχειριστείτε τις ρυθμίσεις cookies μέσω του browser σας.
-
-## Αλλαγές στους Όρους
-Διατηρούμε το δικαίωμα αλλαγής των όρων. Οι αλλαγές θα δημοσιεύονται σε αυτή τη σελίδα.
+Χρησιμοποιούμε cookies για τη βελτίωση της εμπειρίας σας. Τα cookies δεν χρησιμοποιούνται για την ταυτοποίησή σας, ούτε κοινοποιούνται σε τρίτους. Μπορείτε να διαχειριστείτε τις ρυθμίσεις cookies μέσω του browser σας.
 
 ## Επικοινωνία
 Για ερωτήσεις, επικοινωνήστε στο [ethelontoume@gmail.com](mailto:ethelontoume@gmail.com).
