--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,5 +1,7 @@
 ---
 title: Σύλλογος Εθελοντούμε
+description: Ο Σύλλογος εστιάζει στις ανάγκες και τα δικαιώματα όλων των ηλικιακών ομάδων ατόμων με αναπηρία.
+image: img/logo.png
 ---
 
 # Εθελοντούμε
@@ -9,4 +11,4 @@ title: Σύλλογος Εθελοντούμε
 
 Ο Πανελλήνιος Σύλλογος Φίλων Παιδιών, Εφήβων, Ενηλίκων ΑμεΑ και όλων των Παιδιών «Εθελοντούμε» ιδρύθηκε το 2023 στην Αθήνα, με στόχο την ευαισθητοποίηση και ενημέρωση του κοινού για θέματα που αφορούν άτομα με αναπηρίες και γενικά τα παιδιά.
 
-Ο Σύλλογος εστιάζει στις ανάγκες και τα δικαιώματα όλων των ηλικιακών ομάδων ατόμων με αναπηρία και παρέχει υποστήριξη σε οικογένειες με παιδιά που έχουν αυτισμό, σύνδρομο Down, νοητική αναπηρίσ, κινητικά προβλήματα και αισθητηριακές αναπηρίες. Επιπλέον, αγωνιζόμαστε για μια ποιοτική διαβίωση για τους ενηλίκους ΑμεΑ και οργανώνουμε δράσεις ευαισθητοποίησης για το ευρύ κοινό.
+Ο Σύλλογος εστιάζει στις ανάγκες και τα δικαιώματα όλων των ηλικιακών ομάδων ατόμων με αναπηρία και παρέχει υποστήριξη σε οικογένειες με παιδιά που έχουν αυτισμό, σύνδρομο Down, νοητική αναπηρία, κινητικά προβλήματα και αισθητηριακές αναπηρίες. Επιπλέον, αγωνιζόμαστε για μια ποιοτική διαβίωση για τους ενηλίκους ΑμεΑ και οργανώνουμε δράσεις ευαισθητοποίησης για το ευρύ κοινό.
