--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -1,5 +1,7 @@
 ---
 title: Επικοινωνία
+description: Επικοινωνήστε με τον Σύλλογο «Εθελοντούμε» - Αγία Παρασκευή 153 43 - +30 693 126 1777 • ethelontoume@gmail.com. Δείτε τον χάρτη & τα social μας.
+image: /img/logo.jpg
 ---
 
 import GoogleMapEmbed from '@site/src/components/GoogleMapEmbed'; 
