--- a/src/pages/terms-and-conditions.mdx
+++ b/src/pages/terms-and-conditions.mdx
@@ -1,5 +1,7 @@
 ---
 title: Όροι και Προϋποθέσεις
+description: Όροι & Προϋποθέσεις χρήσης του ethelontoume.gr - πνευματική ιδιοκτησία, σύνδεσμοι τρίτων, περιορισμός ευθύνης, αλλαγές όρων, πολιτική απορρήτου & cookies, επικοινωνία
+image: /img/logo.jpg
 ---
 
 # Όροι και Προϋποθέσεις
