--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Σύλλογος Εθελοντούμε
 description: Ο Σύλλογος εστιάζει στις ανάγκες και τα δικαιώματα όλων των ηλικιακών ομάδων ατόμων με αναπηρία.
-image: img/logo.png
+image: /img/logo.png
 ---
 
 # Εθελοντούμε
